--- a/_data/smallgroupevents.yml
+++ b/_data/smallgroupevents.yml
@@ -8,6 +8,11 @@
   location: Mountain View
   attendance: ~12 people
   link: https://fb.me/e/2HgVrLyb0
+- title: Friendsgiving
+  date: SATURDAY, NOVEMBER 12, 2022 AT 5 PM
+  location: South Bay
+  attendance: ~20 people
+  link: https://fb.me/e/2abEPnXku
 - title: Tahoe Trip for Organizers (so sign up to be one!)
   date: Friday - Sunday, Jan 6 to Jan 8
   location: Lake Tahoe
