--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,13 +1,13 @@
 flagship-events:
 - title: 2022 Annual Bonfire at Ocean Beach ($40)
   expire: 2022-9-24
-  date: Saturday, Sept 24 @ 4pm
+  date: SATURDAY, SEPTEMBER 24, 2022 AT 4 PM – 9:30 PM
   location: Ocean Beach
   attendance: 50
   link: https://fb.me/e/1GLYTZteS
 - title: Korean 10k Fun Run
   expire: 2022-10-2
-  date: Sunday, Oct 2 @ 9am
+  date: SUNDAY, OCTOBER 2, 2022 AT 9 AM
   location: Hayes Valley
   attendance: 12
   link: https://fb.me/e/pEKmcEc7i
@@ -19,13 +19,13 @@ flagship-events:
   link: https://fb.me/e/2abEPnXku
 - title: 2022 KAPS Annual Holiday Party ($50)
   expire: 2022-12-10
-  date: Saturday, December 10 @ 5pm
+  date: SATURDAY, DECEMBER 10, 2022 AT 5 PM
   location: San Francisco
   attendance: 100
   link: https://fb.me/e/1GLYTZteS
 - title: Tahoe Trip for Volunteers and Officers (so sign up to be one!)
   expire: 2023-1-8
-  date: Friday - Sunday, Jan 6 to Jan 8
+  date: JAN 6, 2023 AT 5 PM – JAN 8, 2023 AT 10 PM
   location: Lake Tahoe
   attendance: 25
   link: https://fb.me/e/23HWDdUJ4
