--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,1 @@
-title: KAPS - Korean American Professional Society in the San Francisco Bay Area
+title: Korean American Professional Society in the San Francisco Bay Area (KAPS)
