--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 title: Korean American Professional Society in the San Francisco Bay Area (KAPS)
+slogan: Make friends. Advance your career. Belong to community.
+alt-slogan: Come out. Meet real people. Build your community.
