--- a/_data/events.yml
+++ b/_data/events.yml
@@ -6,7 +6,7 @@ kappy-hours:
   link: https://fb.me/e/2va8Zu8au
 
 flagship-events:
-- title: Friendsgiving ($25)
+- title: Friendsgiving (potluck)
   expire: 2022-11-12
   date: SATURDAY, NOVEMBER 12, 2022 AT 5 PM
   location: South Bay
